<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="save">Save</string>
	<string name="close">Close</string>
	<string name="back">Back</string>
	<string name="next">Next</string>

	<string name="TicketView_header">Viewing ticket</string>
	<string name="TicketView_received">Recieved:</string>
	<string name="TicketView_validto">Valid until:</string>
	<string name="TicketView_sender">Sender:</string>
	<string name="TicketView_confirmRemoveTitle">Confirm removal</string>
	<string name="TicketView_confirmRemoveMessage">This will remove the ticker permanent!</string>
	<string name="TicketView_menu_notificationLock">Lock to notification area</string>
	<string name="TicketView_menu_remove">Remove permanent</string>

	<string name="TicketList_header">SMS Tickets</string>
	<string name="TicketList_notickets">No tickets found</string>
	<string name="TicketList_findsms">Scan for tickets</string>
	<string name="TicketList_ticketsloaded">Scan for tickets complete!</string>
	<string name="TicketList_searchingfortickets">Scanning for tickets...</string>

	<string name="TicketList_menu_findnewsms">Scan for tickets</string>
	<string name="TicketList_menu_order">Order ticket</string>
	<string name="TicketList_menu_contact">Contact</string>
	<string name="TicketList_menu_settings">Settings</string>
	<string name="TicketList_menu_about">About the app</string>

	<string name="Contact_header">Contact</string>
	<string name="Contact_reason">Reason</string>
	<string name="Contact_city">City</string>
	<string name="Contact_line">Line</string>
	<string name="Contact_departure">Departure</string>

	<string name="Settings_header">Settings</string>
	<string name="Settings_header_language">Language</string>
	<string name="Settings_systemlanguage">System language</string>
	<string name="Settings_header_theme">Look</string>
	<string name="Settings_header_incoming">New tickets</string>
	<string name="Settings_shownotification">Show icon in notification area</string>
	<string name="Settings_silencesms">Try to suppress sms notification</string>
	<string name="Settings_header_ticketview">Show ticket</string>
	<string name="Settings_keepscreenon">Keep screen on when ticket is shown</string>
	<string name="Settings_header_scan">Scanning</string>
	<string name="Settings_lastscan">Last ticket found:</string>
	<string name="Settings_never">Never</string>
	<string name="Settings_clearlastscan">Rescan all sms</string>

	<string-array name="languages">
		<item>@string/Settings_systemlanguage</item>
		<item>English</item>
		<item>Svenska</item>
	</string-array>

	<string-array name="themes">
		<item>@string/Settings_themelightdark</item>
		<item>@string/Settings_themelight</item>
		<item>@string/Settings_themedark</item>
	</string-array>
	<string name="Settings_themelightdark">Light with dark actionbar</string>
	<string name="Settings_themelight">Light</string>
	<string name="Settings_themedark">Dark</string>

	<string name="About_header">About the app</string>
	<string name="About_description"><![CDATA[Thank you for using Tickets! We hope that it will ease your traveling by keeping your tickets safe.<br /><br />
Please support us by donating via <a href="https://flattr.com/thing/371293">Flattr</a>, <a href="http://bit.ly/NLU8jV">PayPal</a> or <a href="bitcoin:1HmJMPH728Y6CQUFHeR8VDZxS1FCnMHipb?amount=2">Bitcoin</a>!<br /><br />
The app is released under GPL3 and the source if available at <a href="https://github.com/erifre/Biljetter">GitHub</a>.]]></string>

	<string name="SmsReceiver_newticket">New ticket received!</string>
	<string name="SmsReceiver_description">For travel %date%</string>

	<string name="Order_header">Order ticket</string>
	<string name="Order_favorites">Favorites</string>

	<string name="OrderOptions_header">Ticket options</string>
	<string name="OrderOptions_area">Area</string>
	<string name="OrderOptions_type">Type</string>
	<string name="OrderOptions_favorite">Save as favorite</string>
	<string name="OrderOptions_send">Send order</string>
	<string name="OrderOptions_confirmSendTitle">Confirm order</string>
	<string name="OrderOptions_confirmSendMessage">This will send \"%message%\" to %number%.</string>
	<string name="OrderOptions_sending">Sending ticket!</string>
	<string name="OrderOptions_interrupted">Order canceled!</string>

	<string name="Favorites_header">Favorites</string>
	<string name="Favorites_empyt">No favorites added</string>
	<string name="Favorites_added">Favorite added</string>
	<string name="Favorites_removed">Favorite removed</string>
</resources>
