<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ScrollView
		android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:paddingLeft="4sp"
			android:paddingRight="4sp">

			<TextView
				android:text="@string/Settings_header_language"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />

			<Spinner android:id="@+id/spnLanguage"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<TextView
				android:text="@string/Settings_header_theme"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />

			<Spinner android:id="@+id/spnThemes"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<TextView
				android:text="@string/Settings_header_incoming"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />

			<CheckBox android:id="@+id/chkNotification"
				android:text="@string/Settings_shownotification"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" />

			<CheckBox android:id="@+id/chkSilence"
				android:text="@string/Settings_silencesms"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:paddingBottom="6sp" />

			<TextView
				android:text="@string/Settings_header_ticketview"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />

			<CheckBox android:id="@+id/chkKeepScreenOn"
				android:text="@string/Settings_keepscreenon"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:paddingBottom="6sp" />

			<TextView
				android:text="@string/Settings_header_scan"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />

			<TextView android:id="@+id/txtLastScan"
				android:textSize="18sp"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />

			<CheckBox android:id="@+id/chkClearLastScan"
				android:text="@string/Settings_clearlastscan"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:paddingBottom="6sp" />

			<Button android:id="@+id/btnSave"
				android:text="@string/save"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>

